preventing overflow

--- a/Styles/flexbox.css
+++ b/Styles/flexbox.css
@@ -23,7 +23,9 @@
 html, body {
     width: 100%;
     height: var(--LandscapeTotalHeight);
+    overflow: hidden;
 }
+
 
 #glCanvas {
     width: 100%;
